public/css/style.css
:root {
    --bg-primary-color: #00407C; /*dark navy blue*/
    --bg-secondary-color: #ADCDE9; /*light blue*/
    --text-primary-color: #00407C; /*dark navy blue*/
    --text-warning-color: #FFFF00 /*yellow*/
}

.bg-image {
    background-image: url("/assets/blue-blue-bg.png");
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
}

body {
    font-family: "Montserrat", sans-serif;
}

h1, button {
    color: var(--bg-primary-color);
    font-family: "Bungee", cursive;
}

.bg-primary {
    background-color: var(--bg-primary-color) !important;
}

.bg-secondary {
    background-color: var(--bg-secondary-color) !important;
}

.btn-primary {
    background-color: var(--bg-primary-color);
    color: var(--text-warning-color) !important;
}

.text-primary {
    color: var(--text-primary-color) !important;
}

.text-warning {
    color: var(--text-warning-color) !important;
}

